Enable native access via JAR manifest